2004-06-06 Kalle Wallin <kaw@linux.se>
	* i18n: ncmpc is now bilingual (sv)
	* Moved all locale initialization code to main.c
	* main.c: added bind_textdomain_codeset() 	
	* Added wreadln.c, wreadln.h a simple line editor
	* screen_utils.c: use wreadln() instead of curses wgetstr()
	* Added a history for the find command!


2004-06-05 Kalle Wallin <kaw@linux.se>
	* Added initial i18n support
	* Changed directory layout to suit future use of gettext 
	* Changed the default port to 6600
	* screen.c: Added mpd update flag [U] and display a status message
	            when a update has finished
	* screen.c: Display bit rate instead of time when the total time
	            is zero and display local time when mpd is stopped.
	* Addded support for the mpd update command.


2004-05-07 Kalle Wallin <kaw@linux.se>
	* Redesigned ncmpc's color support - view the manual for details!
	* Added support for moving songs in a playlist (move-up, move-down)
	* options.c: added new command line options --config and --key-file,
	             wide_cursor is now enabled by default
	* screen.c: scroll long song titles in the status window,
	            dont display volume changes in the status window.
	
2004-05-03 Kalle Wallin <kaw@linux.se>
	* configure.ac: display default values for --enable-x, 
			version updated to 0.10.2-svn
	* conf.c: The background color can now be assigned to 'none'.

2004-04-26 Kalle Wallin <kaw@linux.se>
	* ncmpc-0.10.1 released (r892)

2004-04-23 Kalle Wallin <kaw@linux.se>
	* Updated Changelog, TODO, NEWS and the manual page.
	* screen_play.c:  Make shure the cursor stays on the same row when 
	                  deleting a playlist entry.
	* screen.c: Turn off LINE_COLORS after drawing the top line.
     

2004-04-22 Kalle Wallin <kaw@linux.se>
	* Added smart delete and add (#0000220), at the moment only used 
	        when deleting or adding a single song.
	* mpc.c: make shure selections in the browse screen is updated 
	         when the playlist updated
	  